<resources>
    <string name="app_name">EVGeo</string>
    <string name="sign_in_using_phone_number">Sign In Using Mobile number</string>
    <string name="we_will_send_an_otp_on_your_mobile_number">We will send an OTP on your Mobile Number</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_your_otp">Enter Your OTP</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="sign_in">Sign In</string>
</resources>