<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInPage"
    android:scrollbars="none"
    android:overScrollMode="never"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/samplelogo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in_using_phone_number"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/we_will_send_an_otp_on_your_mobile_number"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/enter_your_mobile_number"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="vertical"
            >

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:ccp_showFullName="true"
                app:ccp_showPhoneCode="true"
                app:ccp_showNameCode="false"
                android:gravity="center"
                />
            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="99999-99999"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                
                />
        </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:background="@color/colorDivider"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/circle_button"
            android:text="@string/send_otp"
            android:textColor="@color/white"
            android:textStyle="bold"

            />

    </LinearLayout>



</ScrollView>