<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".OTPPage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/samplelogo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in_using_phone_number"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="Enter the OTP Sent to your Mobile Number"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/textMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />

            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />

            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_otp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="14sp"

                />

            <TextView
                android:id="@+id/textResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/resend_otp"
                android:textColor="#FF0000"
                android:textSize="15sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/circle_button"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textStyle="bold"

                />
            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"
                />
        </FrameLayout>


    </LinearLayout>
</ScrollView>